force-app/main/default/objects/Inquiry_hz__c/fields/ListingAgentName_hz__c.field-meta.xml
<CustomField>
    <fullName>ListingAgentName_hz__c</fullName>
    <label>Listing Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>