force-app/main/default/objects/Inquiry_hz__c/fields/ListingOffice__c.field-meta.xml
<CustomField>
    <fullName>ListingOffice__c</fullName>
    <label>Listing Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>