force-app/main/default/objects/Inquiry_hz__c/fields/ListingPrice_hz_max__c.field-meta.xml
<CustomField>
    <fullName>ListingPrice_hz_max__c</fullName>
    <label>Price - max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>