force-app/main/default/objects/Inquiry_hz__c/fields/LocationKeywords__c.field-meta.xml
<CustomField>
    <fullName>LocationKeywords__c</fullName>
    <label>Location Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>