force-app/main/default/objects/Inquiry_hz__c/fields/Locationtext_Dubizzle__c.field-meta.xml
<CustomField>
    <fullName>Locationtext_Dubizzle__c</fullName>
    <label>Locationtext - Dubizzle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>