force-app/main/default/objects/Inquiry_hz__c/fields/LotSize_hz_max__c.field-meta.xml
<CustomField>
    <fullName>LotSize_hz_max__c</fullName>
    <label>Lot Size - max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>