force-app/main/default/objects/Inquiry_hz__c/fields/Mailing_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postcode__c</fullName>
    <formula>Contact__r.MailingPostalCode</formula>
    <label>Mailing Postcode</label>
    <type>Text</type>
</CustomField>