force-app/main/default/objects/Inquiry_hz__c/fields/Manually_Set_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Manually_Set_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Set Criteria</label>
    <type>Checkbox</type>
</CustomField>