force-app/main/default/objects/Inquiry_hz__c/fields/Matching_Price_Max__c.field-meta.xml
<CustomField>
    <fullName>Matching_Price_Max__c</fullName>
    <formula>ListingPrice_hz_max__c * 1.1</formula>
    <label>Matching Price (Max)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>