force-app/main/default/objects/Inquiry_hz__c/fields/Matching_Price_Min__c.field-meta.xml
<CustomField>
    <fullName>Matching_Price_Min__c</fullName>
    <formula>ListingPrice_hz_max__c * 0.9</formula>
    <label>Matching Price (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>