force-app/main/default/objects/Inquiry_hz__c/fields/Matching_Price_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Matching_Price_Minimum__c</fullName>
    <label>Matching Price (Min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>