force-app/main/default/objects/Inquiry_hz__c/fields/Measurement_hz__c.field-meta.xml
<CustomField>
    <fullName>Measurement_hz__c</fullName>
    <label>Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metric</fullName>
            </value>
            <value>
                <fullName>Non-Metric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>