force-app/main/default/objects/Inquiry_hz__c/fields/Min_Yield__c.field-meta.xml
<CustomField>
    <fullName>Min_Yield__c</fullName>
    <label>Min Yield</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>