force-app/main/default/objects/Inquiry_hz__c/fields/MlsId__c.field-meta.xml
<CustomField>
    <fullName>MlsId__c</fullName>
    <label>MLS ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>