force-app/main/default/objects/Inquiry_hz__c/fields/MonthlyRent_max__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRent_max__c</fullName>
    <label>Monthly Rent - max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>