force-app/main/default/objects/Inquiry_hz__c/fields/MonthlyRentMin_hz__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRentMin_hz__c</fullName>
    <label>Monthly Rent - min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>