force-app/main/default/objects/Inquiry_hz__c/fields/MortgageDate_hz__c.field-meta.xml
<CustomField>
    <fullName>MortgageDate_hz__c</fullName>
    <label>Mortgage Date</label>
    <type>Date</type>
</CustomField>