force-app/main/default/objects/Inquiry_hz__c/fields/Name_hz__c.field-meta.xml
<CustomField>
    <fullName>Name_hz__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id,  IF(Description_hz__c=NULL, Name, Description_hz__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>