force-app/main/default/objects/Inquiry_hz__c/fields/NewConstruction__c.field-meta.xml
<CustomField>
    <fullName>NewConstruction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Construction</label>
    <type>Checkbox</type>
</CustomField>