force-app/main/default/objects/Inquiry_hz__c/fields/Next_Task_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Next_Task_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Task Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>