force-app/main/default/objects/Inquiry_hz__c/fields/Paid_Search_Secure__c.field-meta.xml
<CustomField>
    <fullName>Paid_Search_Secure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Search &amp; Secure</label>
    <type>Checkbox</type>
</CustomField>