force-app/main/default/objects/Inquiry_hz__c/fields/Parking_Spaces_max__c.field-meta.xml
<CustomField>
    <fullName>Parking_Spaces_max__c</fullName>
    <label>Parking Spaces - max</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>