force-app/main/default/objects/Inquiry_hz__c/fields/ParkingAvailable__c.field-meta.xml
<CustomField>
    <fullName>ParkingAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parking Available</label>
    <type>Checkbox</type>
</CustomField>