force-app/main/default/objects/Inquiry_hz__c/fields/ParkingMin__c.field-meta.xml
<CustomField>
    <fullName>ParkingMin__c</fullName>
    <label>Parking Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>