force-app/main/default/objects/Inquiry_hz__c/fields/ParkingSpaces__c.field-meta.xml
<CustomField>
    <fullName>ParkingSpaces__c</fullName>
    <label>Parking Spaces</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>