force-app/main/default/objects/Inquiry_hz__c/fields/PetsAllowed_hz__c.field-meta.xml
<CustomField>
    <fullName>PetsAllowed_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pets Allowed</label>
    <type>Checkbox</type>
</CustomField>