force-app/main/default/objects/Inquiry_hz__c/fields/Pool_hz__c.field-meta.xml
<CustomField>
    <fullName>Pool_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>