force-app/main/default/objects/Inquiry_hz__c/fields/Portal_Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Enquiry_Type__c</fullName>
    <label>Portal Enquiry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>