force-app/main/default/objects/Inquiry_hz__c/fields/Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Portal_Link__c</fullName>
    <inlineHelpText>property they enquired about</inlineHelpText>
    <label>Portal Link</label>
    <type>Url</type>
</CustomField>