force-app/main/default/objects/Inquiry_hz__c/fields/Power_Negs__c.field-meta.xml
<CustomField>
    <fullName>Power_Negs__c</fullName>
    <label>Power Negs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>