force-app/main/default/objects/Inquiry_hz__c/fields/Property_Sub_Type_multi__c.field-meta.xml
<CustomField>
    <fullName>Property_Sub_Type_multi__c</fullName>
    <label>Property Sub Type (multi)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential - Apartment</fullName>
            </value>
            <value>
                <fullName>Residential - Bulk Units</fullName>
            </value>
            <value>
                <fullName>Residential - Bungalow</fullName>
            </value>
            <value>
                <fullName>Residential - Compound</fullName>
            </value>
            <value>
                <fullName>Residential - Duplex</fullName>
            </value>
            <value>
                <fullName>Residential - Full floor</fullName>
            </value>
            <value>
                <fullName>Residential - Half floor</fullName>
            </value>
            <value>
                <fullName>Residential - Hotel</fullName>
            </value>
            <value>
                <fullName>Residential - Hotel Apartment</fullName>
            </value>
            <value>
                <fullName>Residential - Land</fullName>
            </value>
            <value>
                <fullName>Residential - Penthouse</fullName>
            </value>
            <value>
                <fullName>Residential - Townhouse</fullName>
            </value>
            <value>
                <fullName>Residential - Villa</fullName>
            </value>
            <value>
                <fullName>Residential - Whole Building</fullName>
            </value>
            <value>
                <fullName>Commercial - Bulk Units</fullName>
            </value>
            <value>
                <fullName>Commercial - Business Centre</fullName>
            </value>
            <value>
                <fullName>Commercial - Co-working Space</fullName>
            </value>
            <value>
                <fullName>Commercial - Factory</fullName>
            </value>
            <value>
                <fullName>Commercial - Farm</fullName>
            </value>
            <value>
                <fullName>Commercial - Full floor</fullName>
            </value>
            <value>
                <fullName>Commercial - Half floor</fullName>
            </value>
            <value>
                <fullName>Commercial - Hotel Apartment</fullName>
            </value>
            <value>
                <fullName>Commercial - Labour Camp</fullName>
            </value>
            <value>
                <fullName>Commercial - Office Space</fullName>
            </value>
            <value>
                <fullName>Commercial - Plot</fullName>
            </value>
            <value>
                <fullName>Commercial - Restaurant</fullName>
            </value>
            <value>
                <fullName>Commercial - Retail</fullName>
            </value>
            <value>
                <fullName>Commercial - Shop</fullName>
            </value>
            <value>
                <fullName>Commercial - Show Room</fullName>
            </value>
            <value>
                <fullName>Commercial - Staff Accommodation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>