force-app/main/default/objects/Inquiry_hz__c/fields/PropertyStatuses__c.field-meta.xml
<CustomField>
    <fullName>PropertyStatuses__c</fullName>
    <label>[deprecated] Property Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>