force-app/main/default/objects/Inquiry_hz__c/fields/PropertySubtypes__c.field-meta.xml
<CustomField>
    <fullName>PropertySubtypes__c</fullName>
    <label>Property Subtype</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>