force-app/main/default/objects/Inquiry_hz__c/fields/PropertyType__c.field-meta.xml
<CustomField>
    <fullName>PropertyType__c</fullName>
    <label>Property Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Commercial/Industrial</fullName>
            </value>
            <value>
                <fullName>Hotel_Apartment</fullName>
                <label>Hotel Apartment</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial Lease</fullName>
            </value>
            <value>
                <fullName>Commercial Sale</fullName>
            </value>
            <value>
                <fullName>Business/Commercial</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Residential Lease</fullName>
            </value>
            <value>
                <fullName>Residential Rental</fullName>
            </value>
            <value>
                <fullName>Compound</fullName>
            </value>
            <value>
                <fullName>Full Floor</fullName>
            </value>
            <value>
                <fullName>Whole Building</fullName>
            </value>
            <value>
                <fullName>Bulk Rent Unit</fullName>
            </value>
            <value>
                <fullName>Bungalow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>