force-app/main/default/objects/Inquiry_hz__c/fields/Prospect_Situation__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Situation__c</fullName>
    <label>Prospect Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Market</fullName>
            </value>
            <value>
                <fullName>Not On Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>