force-app/main/default/objects/Inquiry_hz__c/fields/Prospect_Type__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Type__c</fullName>
    <label>Prospect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Power Negs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>