force-app/main/default/objects/Inquiry_hz__c/fields/PurchaseAmountOfHome_hz__c.field-meta.xml
<CustomField>
    <fullName>PurchaseAmountOfHome_hz__c</fullName>
    <label>Purchase Amount of Home</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>