force-app/main/default/objects/Inquiry_hz__c/fields/Rent_Period__c.field-meta.xml
<CustomField>
    <fullName>Rent_Period__c</fullName>
    <label>Rent Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>