force-app/main/default/objects/Inquiry_hz__c/fields/SaturdayOpenHouse__c.field-meta.xml
<CustomField>
    <fullName>SaturdayOpenHouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Open House</label>
    <type>Checkbox</type>
</CustomField>