force-app/main/default/objects/Inquiry_hz__c/fields/School_hz__c.field-meta.xml
<CustomField>
    <fullName>School_hz__c</fullName>
    <label>School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>