force-app/main/default/objects/Inquiry_hz__c/fields/SchoolAttendanceZones__c.field-meta.xml
<CustomField>
    <fullName>SchoolAttendanceZones__c</fullName>
    <label>School Attendance Zones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>