force-app/main/default/objects/Inquiry_hz__c/fields/SchoolDistricts__c.field-meta.xml
<CustomField>
    <fullName>SchoolDistricts__c</fullName>
    <label>School Districts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>