force-app/main/default/objects/Inquiry_hz__c/fields/Search_Auto_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Search_Auto_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search Auto Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>