force-app/main/default/objects/Inquiry_hz__c/fields/Search_Comments__c.field-meta.xml
<CustomField>
    <fullName>Search_Comments__c</fullName>
    <inlineHelpText>anything specific/wish list</inlineHelpText>
    <label>Search Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>