force-app/main/default/objects/Inquiry_hz__c/fields/Secondary_City__c.field-meta.xml
<CustomField>
    <fullName>Secondary_City__c</fullName>
    <label>Secondary City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>