force-app/main/default/objects/Inquiry_hz__c/fields/SellingTimeFrame_hz__c.field-meta.xml
<CustomField>
    <fullName>SellingTimeFrame_hz__c</fullName>
    <label>Selling Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-3_months</fullName>
                <label>1-3 Months</label>
            </value>
            <value>
                <fullName>3-6_months</fullName>
                <label>3-6 Months</label>
            </value>
            <value>
                <fullName>6-12_months</fullName>
                <label>6-12 Months</label>
            </value>
            <value>
                <fullName>just_curious</fullName>
                <label>Just Curious</label>
            </value>
            <value>
                <fullName>refinancing</fullName>
                <label>Refinancing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>