force-app/main/default/objects/Inquiry_hz__c/fields/Signed_Power_Negs__c.field-meta.xml
<CustomField>
    <fullName>Signed_Power_Negs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Power Negs</label>
    <type>Checkbox</type>
</CustomField>