force-app/main/default/objects/Inquiry_hz__c/fields/Stories_hz__c.field-meta.xml
<CustomField>
    <fullName>Stories_hz__c</fullName>
    <label>Stories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>