force-app/main/default/objects/Inquiry_hz__c/fields/StoriesMax__c.field-meta.xml
<CustomField>
    <fullName>StoriesMax__c</fullName>
    <label>Stories Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>