force-app/main/default/objects/Inquiry_hz__c/fields/StoriesMin__c.field-meta.xml
<CustomField>
    <fullName>StoriesMin__c</fullName>
    <label>Stories Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>