force-app/main/default/objects/Inquiry_hz__c/fields/Style_hz__c.field-meta.xml
<CustomField>
    <fullName>Style_hz__c</fullName>
    <label>Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>