force-app/main/default/objects/Inquiry_hz__c/fields/SubdivisionName__c.field-meta.xml
<CustomField>
    <fullName>SubdivisionName__c</fullName>
    <label>Subdivision Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>