force-app/main/default/objects/Inquiry_hz__c/fields/Subdivisions__c.field-meta.xml
<CustomField>
    <fullName>Subdivisions__c</fullName>
    <label>Subdivisions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>