force-app/main/default/objects/Inquiry_hz__c/fields/SubType_hz__c.field-meta.xml
<CustomField>
    <fullName>SubType_hz__c</fullName>
    <label>Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>