force-app/main/default/objects/Inquiry_hz__c/fields/SundayOpenHouse__c.field-meta.xml
<CustomField>
    <fullName>SundayOpenHouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunday Open House</label>
    <type>Checkbox</type>
</CustomField>