force-app/main/default/objects/Inquiry_hz__c/fields/SystemControl__c.field-meta.xml
<CustomField>
    <fullName>SystemControl__c</fullName>
    <inlineHelpText>Internally used. Don&apos;t include this field on Pagelayouts and please never change manually.</inlineHelpText>
    <label>SystemControl</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN_PREPARATION</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>