force-app/main/default/objects/Inquiry_hz__c/fields/SystemIsActive__c.field-meta.xml
<CustomField>
    <fullName>SystemIsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Internally used. Don&apos;t include this field on Pagelayouts and please never change manually.</inlineHelpText>
    <label>SystemIsActive</label>
    <type>Checkbox</type>
</CustomField>