force-app/main/default/objects/Inquiry_hz__c/fields/SystemIsExternalUpdate__c.field-meta.xml
<CustomField>
    <fullName>SystemIsExternalUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Is External Update</label>
    <type>Checkbox</type>
</CustomField>