force-app/main/default/objects/Inquiry_hz__c/fields/TaxMax__c.field-meta.xml
<CustomField>
    <fullName>TaxMax__c</fullName>
    <label>Tax Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>