force-app/main/default/objects/Inquiry_hz__c/fields/TaxMin__c.field-meta.xml
<CustomField>
    <fullName>TaxMin__c</fullName>
    <label>Tax Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>