force-app/main/default/objects/Inquiry_hz__c/fields/TechnicalSourceSystem__c.field-meta.xml
<CustomField>
    <fullName>TechnicalSourceSystem__c</fullName>
    <description>For identifying the system that created the object</description>
    <label>Technical Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>