force-app/main/default/objects/Inquiry_hz__c/fields/Their_Property_Details__c.field-meta.xml
<CustomField>
    <fullName>Their_Property_Details__c</fullName>
    <inlineHelpText>Link to their property if online</inlineHelpText>
    <label>Their Property Details</label>
    <type>Url</type>
</CustomField>