force-app/main/default/objects/Inquiry_hz__c/fields/ThisWeekOpenHouse__c.field-meta.xml
<CustomField>
    <fullName>ThisWeekOpenHouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This Week Open House</label>
    <type>Checkbox</type>
</CustomField>