force-app/main/default/objects/Inquiry_hz__c/fields/Total_Linked_Listing__c.field-meta.xml
<CustomField>
    <fullName>Total_Linked_Listing__c</fullName>
    <label>Total Linked Listing</label>
    <summaryForeignKey>LinkedListing_hz__c.Inquiry_hz__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>