force-app/main/default/objects/Inquiry_hz__c/fields/TotalArea_hz_max__c.field-meta.xml
<CustomField>
    <fullName>TotalArea_hz_max__c</fullName>
    <label>Size - max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>